--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -1,4 +1,12 @@
 {
+	"nav": {
+		"brand": "Мошкин Юрий",
+		"home": "Главная",
+		"skills": "Навыки",
+		"experience": "Опыт",
+		"personal": "Личное",
+		"contacts": "Контакты"
+	},
 	"bio": {
 		"fio": "Мошкин Юрий Алексеевич",
 		"position": "Senior NODE.JS backend developer",
@@ -189,13 +197,20 @@
 			{ "name": "n8n" }
 		]
 	},
+
 	"experience": {
 		"now": "настоящее время",
 		"responsibility": "Основные обязанности",
 		"technologies": "Используемые технологии",
 		"total": {
-			"title": "Общий стаж работы",
-			"description": "в профессиональной разработке"
+			"main": {
+				"title": "Общий стаж работы",
+				"description": "в профессиональной разработке"
+			},
+			"more": {
+				"title": "Дополнительный стаж работы",
+				"description": "дополнительного опыта"
+			}
 		},
 		"main": {
 			"title": "Основной опыт работы",
@@ -208,14 +223,13 @@
 					"period": ["2024/03/01", null],
 					"projects": [
 						{
-							"name": "**Проект: Портал для UNITY/WEBGL игр**",
-							"description": "Комплексная игровая платформа, обеспечивающая бесшовную интеграцию Unity и WebGL игр с продвинутым управлением пользователями и обработкой платежей",
+							"name": "Проект: Портал обработки изображений с ИИ (NDA)",
+							"description": "Портал для генерации, удаления фона и апскейла изображений: очереди задач, прогресс выполнения, биллинг, хранение в S3.",
 							"responsibilities": [
-								"* Руководство командой разработки из 3 человек (2 frontend и 1 backend) в роли team lead, включая распределение задач и управление процессом разработки.",
-								"* Разработка и оптимизация серверной части, обеспечение высокой производительности и масштабируемости сервиса.",
-								"* Поддержка frontend-разработчиков в реализации бизнес-логики на React и оптимизация взаимодействия клиент-сервер.",
-								"* Интеграция с платёжным шлюзом для обеспечения безопасных и надёжных транзакций.",
-								"* Настройка CI/CD пайплайнов для автоматизированного деплоя на production-сервер и сокращения времени вывода продукта на рынок."
+								"Спроектировал архитектуру и доменную модель (job-пайплайны, пресеты, версии).",
+								"Настроил хранение и выдачу через S3.",
+								"Встроил лимиты/квоты и биллинг, разграничение ролей пользователей.",
+								"Настроил CI/CD (GitLab): сборка Docker-образов, миграции, деплой."
 							],
 							"technologies": [
 								"NodeJS",
@@ -223,21 +237,41 @@
 								"PostgreSQL",
 								"TypeORM",
 								"Docker/Compose",
-								"Redis",
 								"S3",
 								"React/Vite",
 								"Gitlab CI/CD"
 							]
 						},
 						{
-							"name": "**Проект: Telegram WEBAPP игра/приложение(NDA)**",
+							"name": "Проект: Портал для UNITY/WEBGL игр (NDA)",
+							"description": "Платформа для Unity/WebGL-игр с управлением пользователями и платежами.",
+							"responsibilities": [
+								"Руководил командой из 3 разработчиков (2 FE, 1 BE): планирование, приоритизация, ревью.",
+								"Спроектировал и оптимизировал backend для высокой производительности и масштабируемости.",
+								"Синхронизировал бизнес-логику FE/BE, поддерживал команду React в интеграции API.",
+								"Интегрировал платёжный шлюз и настроил безопасную обработку транзакций.",
+								"Внедрил CI/CD (GitLab) для автоматизированных релизов на production."
+							],
+							"technologies": [
+								"NodeJS",
+								"NestJS",
+								"PostgreSQL",
+								"TypeORM",
+								"Docker/Compose",
+								"S3",
+								"React/Vite",
+								"Gitlab CI/CD"
+							]
+						},
+						{
+							"name": "Проект: Telegram MiniApp игра/приложение c уникальной краш-механикой (NDA)",
 							"description": "",
 							"responsibilities": [
-								"* Проектирование и разработка высоконагруженного backend для поддержки сложных игровых сценариев и взаимодействий в Telegram WebApp.",
-								"* Оптимизация производительности на уровне базы данных PostgreSQL, внедрение индексирования и написание сложных запросов для минимизации задержек.",
-								"* Настройка и поддержка системы кэширования с использованием Redis для снижения нагрузки и увеличения скорости отклика приложения.",
-								"* Интеграция с Telegram API.",
-								"* Реализация CI/CD пайплайнов на Gitlab, что позволило сократить время вывода обновлений в production."
+								"Спроектировал высоконагруженный backend под игровые сценарии в Telegram MiniApp.",
+								"Оптимизировал PostgreSQL: индексы, сложные запросы.",
+								"Внедрил кэширование на Redis для разгрузки БД и ускорения отклика.",
+								"Интегрировал Telegram API.",
+								"Настроил CI/CD (GitLab) для быстрых и предсказуемых релизов."
 							],
 							"technologies": [
 								"NodeJS",
@@ -259,14 +293,13 @@
 					"period": ["2022/04/04", "2024/02/04"],
 					"projects": [
 						{
-							"name": "**Проект: CRM для конструктора сайтов**",
+							"name": "Проект: CRM для конструктора сайтов",
 							"description": "",
 							"responsibilities": [
-								"* Разработка и интеграция новых модулей для расширения возможностей CRM.",
-								"* Поиск и исправление багов, улучшение стабильности системы.",
-								"* Интеграция с Kubernetes для обеспечения масштабируемости и управления контейнерами.",
-								"* Написание тестов с использованием Jest для повышения надёжности кода.",
-								"* Оптимизация legacy-кода: рефакторинг и улучшение производительности."
+								"Разрабатывал и интегрировал новые модули CRM.",
+								"Искал и устранял баги, повышал стабильность системы.",
+								"Писал юнит-тесты на Jest для повышения надёжности.",
+								"Проводил рефакторинг legacy-кода и оптимизацию производительности."
 							],
 							"technologies": [
 								"NodeJS",
@@ -279,14 +312,14 @@
 							]
 						},
 						{
-							"name": "**Проект: Приложение для ручного и автоматизированного тестирования API (аналог Postman)**",
+							"name": "Проект: Приложение для ручного и автоматизированного тестирования API (аналог Postman)",
 							"description": "",
 							"responsibilities": [
-								"* Проектирование структуры базы данных для оптимальной работы приложения.",
-								"* Разработка API для обеспечения взаимодействия компонентов системы.",
-								"* Работа с микросервисной архитектурой для повышения гибкости и масштабируемости.",
-								"* Настройка CI/CD процессов для автоматизации сборки и деплоя.",
-								"* Обнаружение и устранение багов для улучшения качества продукта."
+								"Спроектировал модель данных и структуру БД.",
+								"Реализовал API для взаимодействия компонентов системы.",
+								"Работал с микросервисной архитектурой для гибкости и масштабируемости.",
+								"Настроил CI/CD для автоматизации сборки и деплоя.",
+								"Устранял дефекты и повышал качество продукта."
 							],
 							"technologies": [
 								"NodeJS",
@@ -315,19 +348,19 @@
 					"period": ["2013/02/01", "2022/04/01"],
 					"projects": [
 						{
-							"name": "**Проект: Интернет магазин**",
-							"description": "",
+							"name": "Проект: Интернет-магазин",
+							"description": "E-commerce сайт и внутренние сервисы для автоматизации операций (каталог, заказы, склад).",
 							"responsibilities": [
-								"* Разработка и обслуживание сайта",
-								"* Разработка программ, для внутренней работы"
+								"Разрабатывал и сопровождал сайт компании.",
+								"Создавал внутренние инструменты для операционной деятельности."
 							],
 							"technologies": [
-								"HTML5 / CSS3",
+								"HTML5/CSS3",
 								"PHP",
-								"BOOTSTRAP",
+								"Bootstrap",
 								"Nginx",
-								"NodeJS",
-								"ExpressJS",
+								"Node.js",
+								"Express",
 								"PostgreSQL"
 							]
 						}
@@ -340,58 +373,81 @@
 					"period": ["2020/09/01", "2022/04/01"],
 					"projects": [
 						{
-							"name": "",
-							"description": "Обеспечивал техническое обслуживание и поддержку более пяти единиц компьютерной техники.",
-							"responsibilities": [""],
-							"technologies": [""]
+							"name": "Поддержка IT-инфраструктуры",
+							"description": "Техподдержка малого офиса: 5+ рабочих станций и периферия, базовая сеть, резервные копии.",
+							"responsibilities": [
+								"Обслуживание и диагностика рабочих станций и периферии.",
+								"Базовая настройка сети и ПО, обновления и антивирус.",
+								"Резервное копирование и инвентаризация оборудования."
+							],
+							"technologies": [
+								"ОС и офисное ПО",
+								"Периферия",
+								"Backup",
+								"LAN (базовая)"
+							]
 						}
 					]
 				},
 				{
-					"position": "Системный администратор",
 					"company": "Такси «Фунтик/Casper»",
+					"position": "Системный администратор",
 					"location": "г. Юрга",
 					"period": ["2020/11/01", "2022/04/01"],
 					"projects": [
 						{
-							"name": "",
-							"description": "Осуществлял техническое обслуживание и поддержку двух единиц компьютерной техники.",
-							"responsibilities": [""],
-							"technologies": [""]
+							"name": "Поддержка IT-рабочих мест",
+							"description": "Обслуживание 2 рабочих станций: сеть и ПО, периферия, базовая безопасность.",
+							"responsibilities": [
+								"Настройка и поддержка ПК и периферии.",
+								"Базовая сетевая конфигурация и обновления ПО."
+							],
+							"technologies": ["ОС и офисное ПО", "Периферия", "LAN (базовая)"]
 						}
 					]
 				},
 				{
-					"position": "Владелец бизнеса (магазин автозапчастей / франшиза Yandex.Taxi)",
 					"company": "Индивидуальный предприниматель",
+					"position": "Владелец бизнеса (магазин автозапчастей / франшиза Yandex.Taxi)",
 					"location": "г. Юрга",
 					"period": ["2016/08/26", "2019/05/15"],
 					"projects": [
 						{
-							"name": "",
-							"description": "Создал и развил бизнес с нуля до успешной реализации. Получил опыт в области бухгалтерского учета, управления бизнесом, а также изучил ключевые аспекты налогового и трудового законодательства РФ.",
-							"responsibilities": [""],
-							"technologies": [""]
+							"name": "Операционное управление",
+							"description": "Запуск и развитие бизнеса до продажи: финансы, закупки, операционные процессы.",
+							"responsibilities": [
+								"Организовал продажи и операционку, вел базовый учёт.",
+								"Работал с поставщиками и договорами, управлял запасами."
+							],
+							"technologies": [
+								"Операционное управление",
+								"Учёт и закупки",
+								"Работа с договорами"
+							]
 						}
 					]
 				},
 				{
-					"position": "Менеджер отдела продаж",
 					"company": "Goodline (ООО \"Е-Лайт-Телеком\")",
+					"position": "Менеджер отдела продаж",
 					"location": "г. Юрга",
 					"period": ["2015/05/01", "2015/08/01"],
 					"projects": [
 						{
-							"name": "",
-							"description": "Получил опыт продаж продуктов сетевого провайдера, включая интернет-услуги, кабельное ТВ и ТВ-приставки. Прошел обучение техникам холодных продаж.",
-							"responsibilities": [""],
-							"technologies": [""]
+							"name": "Продажи телеком-услуг",
+							"description": "B2C-продажи услуг провайдера (интернет, ТВ), обучение техникам холодных продаж.",
+							"responsibilities": [
+								"Консультировал клиентов и оформлял подключения.",
+								"Выполнял план продаж, проводил холодные контакты."
+							],
+							"technologies": ["CRM", "Скрипты продаж", "Холодные контакты"]
 						}
 					]
 				}
 			]
 		}
 	},
+
 	"personals": {
 		"title": "Личная Информация",
 		"description": "Профессиональные детали и предпочтения",
@@ -424,23 +480,23 @@
 			"title": "Дополнительная информация",
 			"driver": {
 				"name": "Водительское удостоверение",
-				"value": "Обучаюсь на категорию \"B\"."
+				"value": "Категория B — в процессе получения."
 			},
 			"hobbies": {
 				"name": "Хобби и интересы",
-				"value": "Изучаю профессиональную литературу и создаю несколько pet-проектов с нуля. Также развиваюсь в разных направлениях, что мотивирует к постоянному обучению и самосовершенствованию."
+				"value": "Читаю профессиональную литературу, веду несколько pet-проектов с нуля (NestJS, React, Kubernetes). Постоянно расширяю стек и прокачиваю навыки."
 			},
 			"qualities": {
 				"name": "Личные качества",
 				"value": [
 					"Амбициозность",
 					"Коммуникабельность",
-					"Вежливость",
-					"Готовность помочь",
-					"Открытость",
-					"Умение работать в команде",
+					"Тактичность",
+					"Готовность к взаимопомощи",
+					"Открытость обратной связи",
+					"Командная работа",
 					"Стрессоустойчивость",
-					"Стремление к саморазвитию"
+					"Постоянное саморазвитие"
 				]
 			}
 		},
