--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -217,9 +217,9 @@
 			"subtitle": "Профессиональный путь и достижения",
 			"data": [
 				{
-					"company": "Dats.Games",
-					"position": "Senior backend developer",
-					"location": "г.Москва",
+					"company": "Фриланс",
+					"position": "Senior fullstack developer",
+					"location": "-",
 					"period": ["2024/03/01", null],
 					"projects": [
 						{
@@ -229,7 +229,8 @@
 								"Спроектировал архитектуру и доменную модель (job-пайплайны, пресеты, версии).",
 								"Настроил хранение и выдачу через S3.",
 								"Встроил лимиты/квоты и биллинг, разграничение ролей пользователей.",
-								"Настроил CI/CD (GitLab): сборка Docker-образов, миграции, деплой."
+								"Настроил CI/CD (GitLab): сборка Docker-образов, миграции, деплой.",
+								"Долгосрочная поддержка: правки + мониторинг доступности."
 							],
 							"technologies": [
 								"NodeJS",
@@ -250,7 +251,8 @@
 								"Спроектировал и оптимизировал backend для высокой производительности и масштабируемости.",
 								"Синхронизировал бизнес-логику FE/BE, поддерживал команду React в интеграции API.",
 								"Интегрировал платёжный шлюз и настроил безопасную обработку транзакций.",
-								"Внедрил CI/CD (GitLab) для автоматизированных релизов на production."
+								"Внедрил CI/CD (GitLab) для автоматизированных релизов на production.",
+								"Долгосрочная поддержка: правки + мониторинг доступности."
 							],
 							"technologies": [
 								"NodeJS",
@@ -262,7 +264,16 @@
 								"React/Vite",
 								"Gitlab CI/CD"
 							]
-						},
+						}
+					]
+				},
+
+				{
+					"company": "Dats.Games",
+					"position": "Senior backend developer",
+					"location": "г.Москва",
+					"period": ["2024/05/01", "2025/01/01"],
+					"projects": [
 						{
 							"name": "Проект: Telegram MiniApp игра/приложение c уникальной краш-механикой (NDA)",
 							"description": "",
